botão de ativaçao da visibilidade do header do capitulo Fixes #13

--- a/src/app/pages/biblia/biblia.component.css
+++ b/src/app/pages/biblia/biblia.component.css
@@ -1,41 +1,40 @@
 p {
-  font-size: 40px;
+  font-size: 50px;
 }
-#seeInfoCapitulo {
+#headerChapter {
   position: fixed;
   display: flex;
-  left: 0px;
-  top: 70px;
-  height: 70px;
-  width: 100%;
-  transition: all 1s;
+  left: 20%;
+  top: 0px;
+  height: 120px;
+  width: 80%;
+  background-color: white;
+  border-bottom: 4px solid black;
+  transition: all 0.6s;
   cursor: pointer;
   z-index: 10;
 }
 #cardSeeChapter {
   display: flex;
+  text-align: center;
+  margin: auto;
   transition: all 1s;
 }
 
-.viewLiv {
-  font-size: 3em;
-  font-weight: bold;
-  background-color: #084b8a;
-  color: white;
-  border: 8px solid #084b8a;
-  padding: 10px;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  height: 100%;
+#content {
+  margin-left: 20%;
+  width: 80%;
+  min-height: 100vh;
+  transition: all 0.6s;
 }
-.viewCap {
-  font-size: 3em;
+
+
+
+.viewLivCap {
+  font-size: 4em;
   font-weight: bold;
-  background-color: white;
-  border: 8px solid #004e97;
   color: #004e97;
   padding: 10px;
   padding-top: 0px;
   padding-bottom: 0px;
-  height: 100%;
 }
