--- a/src/app/pages/hinario/hinario.component.css
+++ b/src/app/pages/hinario/hinario.component.css
@@ -3,3 +3,9 @@
   font-weight: bold;
   margin: auto;
 }
+#content {
+  margin-left: 20%;
+  width: 80%;
+  min-height: 100vh;
+  transition: all 0.6s;
+}
