--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -11,53 +11,16 @@ a:focus {
   transition: all 0.3s;
 }
 
-.navbar {
-  padding: 15px 10px;
-  background: #fff;
-  border: none;
-  border-radius: 0;
-  margin-bottom: 40px;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.navbar-btn {
-  box-shadow: none;
-  outline: none !important;
-  border: none;
-}
-
-.line {
-  width: 100%;
-  height: 1px;
-  border-bottom: 1px dashed #ddd;
-  margin: 40px 0;
-}
-
-/* ---------------------------------------------------
-    SIDEBAR STYLE
------------------------------------------------------ */
-
-.wrapper {
-  padding: 0px;
-  margin-top: 0px;
-  top: 0px;
-  display: flex;
-  width: 100%;
-  align-items: stretch;
-  perspective: 1500px;
-  z-index: 100;
-}
 
 #sidebar {
   position: fixed;
-  min-width: 250px;
-  max-width: 250px;
+  width: 20%;
+  top: 0%;
   left: 0px;
   height: 100%;
   background: #7386d5;
   color: #fff;
   transition: all 0.6s;
-  transform-origin: bottom left;
   z-index: 100;
 }
 
@@ -106,7 +69,6 @@ a[data-toggle="collapse"] {
   position: absolute;
   top: 50%;
   right: 20px;
-  transform: translateY(-50%);
 }
 
 ul ul a {
@@ -141,75 +103,12 @@ a.article:hover {
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
-#content {
-  margin-left: 250px;
-  width: 100%;
-  min-height: 100vh;
-  transition: all 0.6s;
-}
 
-#sidebarCollapse {
-  width: 40px;
-  height: 40px;
-  background: #f5f5f5;
-  cursor: pointer;
-}
-
-#sidebarCollapse span {
-  width: 80%;
-  height: 2px;
-  margin: 0 auto;
-  display: block;
-  background: #555;
-  transition: all 0.8s cubic-bezier(0.81, -0.33, 0.345, 1.375);
-  transition-delay: 0.2s;
-}
-
-#sidebarCollapse span:first-of-type {
-  transform: rotate(45deg) translate(2px, 2px);
-}
-#sidebarCollapse span:nth-of-type(2) {
-  opacity: 0;
-}
-#sidebarCollapse span:last-of-type {
-  transform: rotate(-45deg) translate(1px, -1px);
-}
-
-#sidebarCollapse.active span {
-  transform: none;
-  opacity: 1;
-  margin: 5px auto;
-}
-
-/* ---------------------------------------------------
-    MEDIAQUERIES
------------------------------------------------------ */
 @media (max-width: 768px) {
   #sidebar {
     margin-left: -250px;
-    transform: rotateY(90deg);
   }
   #sidebar.active {
     margin-left: 0;
-    transform: none;
-  }
-  #sidebarCollapse span:first-of-type,
-  #sidebarCollapse span:nth-of-type(2),
-  #sidebarCollapse span:last-of-type {
-    transform: none;
-    opacity: 1;
-    margin: 5px auto;
-  }
-  #sidebarCollapse.active span {
-    margin: 0 auto;
-  }
-  #sidebarCollapse.active span:first-of-type {
-    transform: rotate(45deg) translate(2px, 2px);
-  }
-  #sidebarCollapse.active span:nth-of-type(2) {
-    opacity: 0;
-  }
-  #sidebarCollapse.active span:last-of-type {
-    transform: rotate(-45deg) translate(1px, -1px);
   }
 }
